--- a/style.css
+++ b/style.css
@@ -1,30 +1,70 @@
+html {
+  background-color: #000000;
+}
+* {
+  box-sizing: border-box;
+}
+nav {
+  background-color: #000000;
+  color: #FFFFFF;
+  display: block;
+  text-align: center;
+}
+nav a:link, a:visited {
+  text-decoration: none;
+  font-size: 140%;
+  background-color: #424242;
+  color: #FFFFFF;
+  display: inline;
+}
+h1 {
+  background-color: #848484;
+}
 .section1 {
-  background-color: green;
+  background-color: #A4A4A4;
+  margin: 0;
+  padding: 0;
+}
+.section2 {
+  background-color: #BDBDBD;
+}
+.section3 {
+  background-color: #BDBDBD;
+}
+.redessociales {
+  background-color: #BDBDBD;
+  text-align: center;
 }
 h5 {
   font-size:150% ;
   display: inline;
   text-align: justify;
 }
-
 .sigueme {
     list-style: none;
+    text-align: center;
 }
-a:link, a:visited {
+.redessociales a {
+  text-align:center;
+}
+.redessociales a:link, a:visited {
     text-decoration: none;
     background-color: #424242;
     color: #FFFFFF;
-    display: block;
+    display: inline;
     width: 150px;
     text-align: center;
     margin-bottom: 1px;
 }
-a:hover, a:active {
+.redessociales a:hover, a:active {
     background-color: #151515;
     color: #FFFFFF;
 }
-  }
-.footer {
-    font-style: italic;
+footer {
+    background-color: #A4A4A4;
     font-size: 17px;
+    text-align: center;
+}
+q {
+  font-style: italic;
 }
