Just another change

--- a/style.css
+++ b/style.css
@@ -19,17 +19,30 @@ nav a:link, a:visited {
 }
 h1 {
   background-color: #848484;
+  text-align: center;
 }
 .section1 {
-  background: #A4A4A4 url("repeat.jpg");
+  background: #A4A4A4;
+  text-align: center;
+  height: 50%;
   margin: 0;
   padding: 0;
 }
 .section2 {
   background-color: #BDBDBD;
 }
+.unordered {
+  height: 30%;
+  float: left;
+}
+.ordered {
+position: relative;
+
+}
 .section3 {
   background-color: #BDBDBD;
+  text-align: center;
+  clear: both;
 }
 .redessociales {
   background-color: #BDBDBD;
